fixed the spacing in the green overlay and made the image container maintain ratio 1:1

--- a/src/app/containers/ProductItem/c/productitem.scss
+++ b/src/app/containers/ProductItem/c/productitem.scss
@@ -3,14 +3,12 @@
 
 .prodItemWrapper {
     min-width: 256px;
-    min-height: 452px;
+    min-height: 352px;
     background: $c-white;
     display: flex;
 }
 
 .prodItemContainer {
-    display: flex;
-    flex-direction: column;
     position: relative;
     padding: 0 10px;
     border: 1px solid rgba($c-black, 0.09);
@@ -19,22 +17,44 @@
 
 .imageContainer {
     max-width: 512px;
+    max-height: 512px;
     display: flex;
     justify-content: center;
     align-items: center;
     align-self: center;
-    margin: auto 0;
+    margin: auto;
+    background: red;
+}
+
+.fluidContainer {
+    width: 100%;
+    padding-top: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    position: relative;
+}
+
+.prodImgContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.prodImg {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .prodName {
     font-size: 20px;
     line-height: 24px;
     margin: 12px 0;
-}
-
-.productImg {
-    max-width: 100%;
-    max-height: 512px;
 }
 
 .prodCategory {
@@ -63,7 +83,7 @@
 }
 
 .tileItem {
-    padding: 15px 0;
+    padding: 10px 0;
     border-bottom: 3px solid rgba($c-white, 0.2);
 }
 
@@ -78,7 +98,6 @@
     color: $c-white;
 }
 @media screen and (min-width: 1240px) {
-
     .prodItemContainer {
         border: none;
     }
