--- a/src/app/theme/core.scss
+++ b/src/app/theme/core.scss
@@ -68,9 +68,4 @@
 	img{
 		filter: blur(0px);
 	}
-	ul{
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
 }
